[package]
name = "example_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "example_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
anyhow = "1.0.71"

[dependencies.quinn]
version = "0.10.1"
features = ["rustls", "log"]

[dependencies.tokio]
version = "1.28.2"
features = ["io-util"]

[dependencies.uuid]
version = "1.3.3"