[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote = "*"
proc-macro2 = "*"
r3bl_rs_utils = "*"
async-trait = "0.1.68"
anyhow = "1.0.71"

[dependencies.quinn]
version = "0.10.1"
features = ["rustls", "log"]

[dependencies.example_core]
path = "../example_core"